--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,9 @@ nav#navbar {
     width: 13.5rem;
     padding-top: 0.6rem;
     border-right: 2px solid #ccc;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
+    position: fixed;
+    top: 0;
+    left: calc(50vw - 35rem);
 }
 
 /* Elementos de la barra de navegación */
@@ -92,8 +92,23 @@ nav#navbar {
     width: 40rem;
 }
 
+@media (max-width: 1125px) {
+    nav#navbar {
+        width: 4.4rem;
+        left: calc(50vw - 25.8rem);
+    }
+
+    .nav-item, #encabezado-text {
+        font-size: 0;
+    }
+
+    .nav-item svg, #encabezado svg {
+        margin: 0;
+    }
+}
+
 /* Disposición con ventana delgada (móviles, etc.) */
-@media (max-width: 800px) {
+@media (max-width: 820px) {
     nav#navbar {
         /* Barra de navegación horizontal */
         flex-direction: row;
