--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,8 @@ nav#navbar {
 }
 
 .post .body h2,
-.post .body p {
+.post .body p,
+.post .body ul {
     color: #444;
 }
 
@@ -214,6 +215,10 @@ nav#navbar {
 .post .body p {
     font-size: 16px;
     line-height: 1.5;
+}
+
+.post .body li {
+    padding: 3px;
 }
 
 .post .body img {
