--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,9 @@ nav#navbar {
     margin-top: 20px;
 }
 
+.post .body h1,
 .post .body h2,
+.post .body h4,
 .post .body p,
 .post .body ul {
     color: #444;
@@ -246,10 +248,10 @@ nav#navbar {
     fill: rgb(214, 8, 8);
 }
 
-.buttons .sales-contact {
+.action-button {
     background-color: inherit;
-    border: 2px solid #555;
-    border-radius: 5px;
+    border: 2px solid #999;
+    border-radius: 7px;
     color: #555;
     font-size: 1em;
     font-weight: bold;
@@ -258,7 +260,7 @@ nav#navbar {
     transition: background-color 0.3s ease;
 }
 
-.buttons .sales-contact:hover {
+.action-button:hover {
     color: #ddd;
     background-color: #1e3c70;
 }
@@ -272,7 +274,7 @@ nav#navbar {
 }
 
 /* Select Styles */
-select {
+#career-selector {
     margin-bottom: 20px;
     padding: 10px;
     border: 2px solid #ccc;
@@ -284,8 +286,52 @@ select {
     font-weight: bold;
 }
 
-select:hover,
-select:focus {
+#career-selector:hover,
+#career-selector:focus {
+    border-color: #1e3c70;
+    outline: none;
+}
+
+#prof-comment select {
+    padding: 5px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    background-color: white;
+    color: #555;
+    transition: border-color 0.3s ease;
+}
+
+#prof-comment select:hover,
+#prof-comment select:focus {
+    border-color: #1e3c70;
+    outline: none;
+}
+
+#prof-comment input,
+#prof-comment textarea {
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+}
+
+#prof-comment textarea {
+    width: 99%;
+}
+
+/* Input and Textarea Styles */
+#prof-comment input[type="text"],
+#prof-comment textarea {
+    padding: 5px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    background-color: white;
+    color: #555;
+    transition: border-color 0.3s ease;
+}
+
+#prof-comment input[type="text"]:hover,
+#prof-comment input[type="text"]:focus,
+#prof-comment textarea:hover,
+#prof-comment textarea:focus {
     border-color: #1e3c70;
     outline: none;
 }
