--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@ nav#navbar {
         padding: 10px 5px;
         font-size: 0;
         flex-grow: 1;
+        flex-shrink: 1;
         margin-top: 0;
     }
 
