--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,7 @@ nav#navbar {
 }
 
 .action-button {
-    background-color: inherit;
+    background-color: #f9f9f9;
     border: 2px solid #999;
     border-radius: 7px;
     color: #555;
@@ -302,6 +302,13 @@ nav#navbar {
     outline: none;
 }
 
+#prof-comment select {
+    padding: 5px;
+    background-color: white;
+    text-align: left;
+    margin-bottom: 0;
+}
+
 #prof-comment input,
 #prof-comment textarea {
     margin-top: 0.5em;
@@ -348,6 +355,7 @@ nav#navbar {
 #date-buttons {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 1rem;
 }
 
 #date-buttons .action-button {
