--- a/auxiliary/styles.css
+++ b/auxiliary/styles.css
@@ -333,6 +333,7 @@ nav#navbar {
 #prof-comment textarea {
     margin-top: 0.5em;
     margin-bottom: 1em;
+    font-size: 0.9em;
 }
 
 #prof-comment textarea {
