Fix svg hover for encabezado

--- a/auxiliary/styles.css
+++ b/auxiliary/styles.css
@@ -106,8 +106,12 @@ nav#navbar {
     color: var(--unam-gold);
 }
 
-:not.night #encabezado:hover svg {
+#encabezado:hover svg {
     color: var(--discrete-border);
+}
+
+.night #encabezado:hover svg {
+    color: var(--primary-text);
 }
 
 #encabezado:hover {
